<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome"
                    android:inputType="textPersonName" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/margin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textTelefone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/telefone"
                            android:inputType="phone" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin"
                            android:text="@string/data_de_nascimento" />

                        <CalendarView
                            android:id="@+id/calendarViewDataNascimento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/buttonEnviar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/enviar" />

                    </com.google.android.material.textfield.TextInputLayout>

                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>